@@ -412,8 +412,11 @@ def get_permissions_from_multi_dict(multi_dict):
     permissions = []
 
     # gather all access, actions, and class_names
-    all_class_names = EntityType.query.all()
+    all_class_names = [entity_type.name for entity_type in EntityType.query.all()]
     all_actions = defaults.actions
+
+    logger.debug(all_class_names)
+    logger.debug(all_actions)
 
     for key in multi_dict.keys():
         access = multi_dict[key]
@@ -432,19 +435,19 @@ def get_permissions_from_multi_dict(multi_dict):
 
         else:
 
-            # if access in ['Allow', 'Deny'] and \
-            #     class_name in all_class_names and \
-            #     action in all_actions:
+            if access in ['Allow', 'Deny'] and \
+                class_name in all_class_names and \
+                action in all_actions:
 
-            # get permissions
-            permission = Permission.query \
-                .filter_by(access=access) \
-                .filter_by(action=action) \
-                .filter_by(class_name=class_name) \
-                .first()
-
-            if permission:
-                permissions.append(permission)
+                # get permissions
+                permission = Permission.query \
+                    .filter_by(access=access) \
+                    .filter_by(action=action) \
+                    .filter_by(class_name=class_name) \
+                    .first()
+    
+                if permission:
+                    permissions.append(permission)
 
     logger.debug(permissions)
     return permissions
